# tuple_space

./: .gitignore  README.md  pyproject.toml
experiments/: honey_bear.py
src/: space.py
tuple_space/: entities.py  example.py  generic_entities.py  main.py  space.py
tuple_space/entities/: honey_world.py
