[tool.poetry]
name = "tuple_space"
version = "0.1.0"
description = "tuple space model in python"
repository = "https://github.com/CaioMizerkowski/tuple_space"
authors = ["Caio Mizerkowski <caiomizerkowski@gmail.com>"]
keywords = ["tuple space"]
readme = "README.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'

exclude = '''
/(
	\.git
| \.venv
)/ 
'''
